--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
   --transition-function: cubic-bezier(0.4, 0, 0.2, 1);
   --CLOUD: #f4f4fd;
   --WHITE: #ffffff;
+  --NAVY-BLUE: #4d5ae5;
+  --OCEAN: #404bbf;
 }
 
 body {
@@ -78,6 +80,10 @@ img {
   padding: 0 15px;
   width: 100%;
   margin: 0 auto;
+}
+
+.icon {
+  fill: currentColor;
 }
 
 .logo {
@@ -408,4 +414,116 @@ img {
   background-position: center;
   max-width: 1440px;
   margin: 0 auto;
+}
+
+.modal-overlay {
+  background: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms ease-in-out;
+  padding-top: 80px;
+  padding-bottom: 12px;
+}
+
+.modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.modal {
+  padding: 16px;
+  max-width: 408px;
+  width: 100%;
+  max-height: 100%;
+  overflow-y: auto;
+  border-radius: 4px;
+  background: var(--DAIRY, #fcfcfc);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+
+.modal--close {
+  background-color: var(--CORNFLOWER, #e7e9fc);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+  transition: background-color, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 24px;
+  margin-left: auto;
+}
+
+.modal--close:hover {
+  background-color: var(--OCEAN);
+  border-color: var(--OCEAN);
+  color: var(--WHITE);
+}
+
+.modal--ttl {
+  color: var(--NAVY-BLUE, #2e2f42);
+  text-align: center;
+
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.form {
+}
+
+.form--input-wrapper {
+  position: relative;
+  display: flex;
+}
+.form--label {
+  color: var(--LIGHT-SLATE, #8e8f99);
+
+  /* Small Text */
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  margin-bottom: 4px;
+  display: block;
+}
+.form--input {
+  border-radius: 4px;
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
+  width: 100%;
+  padding: 0;
+  padding-left: 38px;
+  height: 40px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form--input:focus {
+  outline: none;
+  border-color: var(--IRIS, #4d5ae5);
+}
+.form--input:focus::placeholder {
+  opacity: 0;
+}
+.form--input-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.form--input:focus ~ .form--input-icon {
+  color: var(--IRIS, #4d5ae5);
 }
