--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@
   --transition-function: cubic-bezier(0.4, 0, 0.2, 1);
   --CLOUD: #f4f4fd;
   --WHITE: #ffffff;
-  --NAVY-BLUE: #4d5ae5;
+  --NAVY-BLUE: #2e2f42;
   --OCEAN: #404bbf;
+  --IRIS: #4d5ae5;
 }
 
 body {
@@ -183,7 +184,7 @@ img {
   padding: 16px 32px;
 }
 
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -425,13 +426,11 @@ img {
   width: 100%;
   height: 100%;
   z-index: 999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   opacity: 0;
   pointer-events: none;
-  transition: opacity 250ms ease-in-out;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-top: 80px;
   padding-bottom: 12px;
 }
@@ -442,38 +441,54 @@ img {
 }
 
 .modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 16px;
   max-width: 408px;
   width: 100%;
+  min-height: 584px;
   max-height: 100%;
   overflow-y: auto;
   border-radius: 4px;
   background: var(--DAIRY, #fcfcfc);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 
 .modal--close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
   background-color: var(--CORNFLOWER, #e7e9fc);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 8px;
-  transition: background-color, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 24px;
   margin-left: auto;
 }
-
+.modal--close:focus,
 .modal--close:hover {
+  border: none;
   background-color: var(--OCEAN);
-  border-color: var(--OCEAN);
   color: var(--WHITE);
+}
+.modal--close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal--ttl {
-  color: var(--NAVY-BLUE, #2e2f42);
+  color: var(--NAVY-BLUE);
   text-align: center;
 
   font-size: 16px;
@@ -483,9 +498,9 @@ img {
   letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
-.form {
+.form--item {
+  margin-bottom: 8px;
 }
-
 .form--input-wrapper {
   position: relative;
   display: flex;
@@ -497,22 +512,23 @@ img {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   margin-bottom: 4px;
   display: block;
 }
 .form--input {
   border-radius: 4px;
+  background-color: transparent;
   border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
   width: 100%;
   padding: 0;
   padding-left: 38px;
   height: 40px;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form--input:focus {
-  outline: none;
   border-color: var(--IRIS, #4d5ae5);
 }
 .form--input:focus::placeholder {
@@ -523,7 +539,72 @@ img {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form--input:focus ~ .form--input-icon {
   color: var(--IRIS, #4d5ae5);
+}
+.form--input-textarea {
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 8px 16px;
+}
+
+.form--privacy {
+  display: block;
+  margin-bottom: 24px;
+}
+.form--checkbox {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  margin-right: 8px;
+}
+.form--input-privacy:checked ~ .form--label-privacy > .form--checkbox {
+  background-color: var(--OCEAN);
+  border: none;
+  fill: var(--CLOUD);
+}
+.form--btn {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 4px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--WHITE);
+  cursor: pointer;
+  background-color: var(--IRIS);
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  margin: 0 auto;
+}
+.form--btn:hover,
+.form--btn:active {
+  background-color: var(--OCEAN, #404bbf);
+}
+.link {
+  color: var(--IRIS);
 }
