--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,7 @@ img {
   color: var(--CLOUD, #f4f4fd);
   max-width: 264px;
 }
-.footer-social-ttl {
+.footer-ttl {
   color: var(--WHITE);
   font-weight: 500;
   font-size: 16px;
@@ -612,4 +612,25 @@ img {
 }
 .link {
   color: var(--IRIS);
+}
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+.footer-from--input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--WHITE);
+}
+
+.footer-from--input::placeholder {
+  color: var(--WHITE);
 }
